--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.1",
+    "react-center": "^1.1.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-fitted-image": "^0.1.3",
+    "react-scripts": "1.1.4",
+    "react-stack-grid": "^0.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
