--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "react-center": "^1.1.1",
     "react-dom": "^16.4.1",
     "react-fitted-image": "^0.1.3",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-scrollable-anchor": "^0.6.1",
     "react-stack-grid": "^0.7.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "smooth-anchorate": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
