--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^4.12.0",
     "react": "^16.4.1",
     "react-center": "^1.1.1",
     "react-dom": "^16.4.1",
