--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "firebase": "^5.2.0",
     "i": "^0.3.6",
-    "npm": "^6.2.0",
+    "npm": "^6.3.0",
     "react": "^16.4.1",
     "react-center": "^1.1.1",
     "react-dom": "^16.4.1",
@@ -28,5 +28,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "typescript": "^3.0.1"
   }
 }
